--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "redis": "2.6.2"
   },
   "devDependencies": {
+    "bluebird": "^3.4.1",
     "chai": "3.5.0",
+    "co": "^4.6.0",
     "eslint": "1.10.3",
     "eslint-config-airbnb": "2.1.1",
     "istanbul": "0.4.4",
