--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ language: node_js
 node_js:
   - "4"
   - "6"
+before_install:
+  - git submodule update --init --recursive
+  - 'cd qless-core && make'
+  - npm install
 script:
   - npm run coverage
   - npm run lint
