--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/seomoz/qjess.git"
+    "url": "git+https://github.com/seomoz/qless-js.git"
   },
   "author": "Evan Battaglia",
   "contributors": [
@@ -28,9 +28,9 @@
     }
   ],
   "bugs": {
-    "url": "https://github.com/seomoz/qjess/issues"
+    "url": "https://github.com/seomoz/qless-js/issues"
   },
-  "homepage": "https://github.com/seomoz/qjess#readme",
+  "homepage": "https://github.com/seomoz/qless-js#readme",
   "main": "qless.js",
   "dependencies": {
     "debug": "2.2.0",
