--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "coverage": "istanbul cover -- node_modules/.bin/_mocha --recursive && bash .istanbul-check-coverage.sh",
     "lint": "node_modules/.bin/eslint --env node lib",
     "test": "DEBUG='qless:*' node_modules/.bin/_mocha --recursive",
+    "build": "cd qless-core && make clean && make && cp qless.lua qless-lib.lua ../qless-lua",
     "travis": "npm run coverage && npm run lint && echo && echo ----------------- && echo 'Everything OK! You are good to commit.'"
   },
   "repository": {
