--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "coverage": "istanbul cover -- node_modules/.bin/_mocha --recursive && bash .istanbul-check-coverage.sh",
     "lint": "node_modules/.bin/eslint --env node lib",
     "test": "DEBUG='qless:*' node_modules/.bin/_mocha --recursive",
-    "build": "cd qless-core && make clean && make && cp qless.lua qless-lib.lua ../qless-lua",
+    "build": "git submodule init && git submodule update && cd qless-core && make clean && make && cp qless.lua qless-lib.lua ../qless-lua && echo && echo ==================== && echo && echo Lua scripts successfully rebuilt!",
     "travis": "npm run coverage && npm run lint && echo && echo ----------------- && echo 'Everything OK! You are good to commit.'"
   },
   "repository": {
