--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "qless-core"]
 	path = qless-core
-	url = git@github.com:seomoz/qless-core
+	url = https://github.com/seomoz/qless-core.git
