--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "lint": "eslint --ext .js bin lib test",
-    "test": "jest --runInBand"
+    "test": "jest --runInBand",
+    "build": "git submodule update --init --recursive && make -C lib/qless-core clean all"
   },
   "repository": {
     "type": "git",
