--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-config-airbnb": "2.1.1",
     "istanbul": "0.4.4",
     "mocha": "2.5.3",
-    "mocha-co": "1.17.1-co.1"
+    "mocha-co": "1.17.1-co.1",
+    "sinon": "2.1.0"
   }
 }
