Add a test helper to aid in cleanup.

--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
       "!bin/**",
       "!index.js",
       "!**/node_modules/**",
-      "!coverage/**"
+      "!coverage/**",
+      "!test/helper.js"
     ],
     "coverageThreshold": {
       "global": {
