--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.5.0",
+    "redis": "^2.7.1",
     "winston": "^2.3.1"
   },
   "devDependencies": {
