--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "redis": "^2.7.1",
+    "uuid": "^3.0.1",
     "winston": "^2.3.1"
   },
   "devDependencies": {
