--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     }
   ],
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "winston": "^2.3.1"
+  },
   "devDependencies": {
     "babel-core": "^6.20.0",
     "babel-eslint": "^7.1.1",
