--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "^3.18.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-plugin-import": "2.2.0",
+    "expect.js": "^0.3.1",
     "jest": "^19.0.2"
   },
   "jest": {
