--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "eslint-config-airbnb": "14.1.0",
     "eslint-plugin-import": "2.2.0",
     "expect.js": "^0.3.1",
-    "jest": "^19.0.2"
+    "jest": "^19.0.2",
+    "sinon": "^2.1.0"
   },
   "jest": {
     "collectCoverage": true,
