--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.5.0",
+    "commander": "^2.9.0",
     "double-ended-queue": "^2.1.0-0",
     "redis": "^2.7.1",
     "uuid": "^3.0.1",
