--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bluebird": "^3.5.0",
     "commander": "^2.9.0",
     "double-ended-queue": "^2.1.0-0",
+    "json-stable-stringify": "^1.0.1",
     "redis": "^2.7.1",
     "uuid": "^3.0.1",
     "winston": "^2.3.1"
