--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bluebird": "^3.5.0",
     "commander": "^2.9.0",
     "double-ended-queue": "^2.1.0-0",
+    "es6-error": "^4.0.2",
     "json-stable-stringify": "^1.0.1",
     "redis": "^2.7.1",
     "uuid": "^3.0.1",
