--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
       "!**/node_modules/**",
       "!coverage/**",
       "!test/helper.js",
-      "!test/workers/job.js",
+      "!test/jobs/**",
       "!lib/workers/forking-workerpool.js"
     ],
     "coverageThreshold": {
