--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qless-js",
-  "version": "0.4.5",
+  "version": "0.4.6",
   "private": false,
   "description": "Qless JavaScript Bindings",
   "main": "index.js",
@@ -14,6 +14,7 @@
   "scripts": {
     "lint": "eslint --ext .js bin lib test",
     "test": "jest --runInBand",
+    "preinstall": "git submodule update --init --recursive && make -C lib/qless-core clean all",
     "prepublish": "git submodule update --init --recursive && make -C lib/qless-core clean all"
   },
   "repository": {
@@ -38,6 +39,7 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.5.0",
+    "bytes": "^3.1.0",
     "commander": "^2.9.0",
     "double-ended-queue": "^2.1.0-0",
     "es6-error": "^4.0.2",
@@ -45,6 +47,7 @@
     "mkdirp": "^1.0.4",
     "redis": "^2.7.1",
     "rimraf": "^3.0.2",
+    "usage": "^0.7.1",
     "uuid": "^3.0.1",
     "winston": "^2.3.1",
     "workerpool": "^2.3.0"
