--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qless-js",
-  "version": "0.4.7",
+  "version": "0.4.8",
   "private": false,
   "description": "Qless JavaScript Bindings",
   "main": "index.js",
@@ -44,9 +44,9 @@
     "es6-error": "^4.0.2",
     "json-stable-stringify": "^1.0.1",
     "mkdirp": "^1.0.4",
+    "pidusage": "^2.0.21",
     "redis": "^2.7.1",
     "rimraf": "^3.0.2",
-    "usage": "^0.7.1",
     "uuid": "^3.0.1",
     "winston": "^2.3.1",
     "workerpool": "^2.3.0"
